# dagger

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
src/dagger/: __init__.py  dagcorator_example.py  dagger.py  daghandler.py  example.py  mshandler.py
src/dagger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dagger/scripts/: dagger.py  split_ms.py
src/dagger/tests/: test_dagger.py
tests/: test_dagger.py
