[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dagger"
dynamic = ["readme"]
version = "0.01"
authors = [
         {name = "Srikrishna Sekhar", email = "ssekhar@nrao.edu" },
         ]
description = "Write DAGs for cube imaging on HTCondor"
dependencies = [
    'htcondor',
    'numpy <2.0',
    'sphinx',
]
license = {file="LICENSE"}
requires-python = ">=3.10"
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: MIT License",
            "Operating System :: OS Independent",
            ]

[project.urls]
"Homepage" = "https://github.com/Kitchi/dagger"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ['*.txt']
